--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./API-Gateway/src/Microservice-Routers/microserviceRouters.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ddos": "^0.2.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "helmet": "^7.0.0",
@@ -19,6 +22,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "pm2": "^5.3.0",
+    "rate-limit-redis": "^3.0.2",
+    "redis": "^4.6.7",
     "response-time": "^2.3.2"
   }
 }
