--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bunyan": "^1.8.15",
+    "bunyan-format": "^0.2.1",
     "ddos": "^0.2.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
