pm2 integration and jwt middleware bug fix

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./API-Gateway/src/Microservice-Routers/microserviceRouters.js",
+    "startDev": "pm2 start ecosystem.config.js",
+    "start": "node ./API-Gateway/src/Microservice-Routers/microserviceRouters.js",
+    "kill": "pm2 kill",
+    "monitor" : "pm2 monitor",
+    "displayLogs": "pm2 logs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
